--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Crownstone Quarters</title>
+    <meta name="description" content="Professional short-stay property management in Sydney — compliance-first, transparent reporting, hotel-grade care." />
   </head>
   <body>
     <div id="root"></div>
